update limitation, build parameters, devstage(beta->alpha)

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ description-file = README.rst
 home_page = https://bitbucket.org/shimizukawa/rst2textile
 author = Takayuki SHIMIZUKAWA
 author_email = shimizukawa@gmail.com
-classifier = Development Status :: 4 - Beta
+classifier = Development Status :: 3 - Alpha
     Topic :: Utilities
     Environment :: Other Environment
     License :: OSI Approved :: Apache Software License
@@ -25,5 +25,21 @@ extra_files = README.rst
     setup.py
     examples/sample.rst
     examples/sample.txt
-    examples/text.txt
 
+[build]
+build-base = _build
+
+[sdist]
+;formats = gztar
+dist-dir = _dist
+
+[bdist]
+;formats = gztar
+dist-dir = _dist
+
+[upload_docs]
+upload-dir = _build/sphinx/html
+
+[aliases]
+upload_docs = build_sphinx upload_docs
+release = check -r -s register sdist upload_docs upload
