--- a/setup.cfg
+++ b/setup.cfg
@@ -43,3 +43,6 @@ upload-dir = _build/sphinx/html
 [aliases]
 upload_docs = build_sphinx upload_docs
 release = check -r -s register sdist upload_docs upload
+
+[test]
+suite = test.suite
