restructuring package structure

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,11 +20,13 @@ classifier = Development Status :: 3 - Alpha
 requires-dist = docutils
 
 [files]
+packages = docutils_textile
 modules = rst2textile
 extra_files = README.rst
     setup.py
     examples/sample.rst
     examples/sample.txt
+scripts = rst2textile.py
 
 [build]
 build-base = _build
