add test.py for sdist package

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,7 @@ packages = docutils_textile
 modules = rst2textile
 extra_files = README.rst
     setup.py
+    test.py
     examples/sample.rst
     examples/sample.txt
 scripts = rst2textile.py
