--- a/setup.cfg
+++ b/setup.cfg
@@ -20,14 +20,20 @@ classifier = Development Status :: 3 - Alpha
 requires-dist = docutils
 
 [files]
+#TODO: users are install rst2textile, but docutils_textile package will be installed too.
 packages = docutils_textile
+#for '$ python -m rst2textile'
 modules = rst2textile
-extra_files = README.rst
+#for '$ rst2textile.py ...
+scripts = rst2textile.py
+
+#but need MANIFEST.in for old setup.py
+extra_files =
+    README.rst
     setup.py
     test.py
     examples/sample.rst
     examples/sample.txt
-scripts = rst2textile.py
 
 [build]
 build-base = _build
