add MANIFEST.in for distribution

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ scripts = rst2textile.py
 #but need MANIFEST.in for old setup.py
 extra_files =
     README.rst
+    MANIFEST.in
     setup.py
     test.py
     examples/sample.rst
