feature: setuptools support if using setup.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -55,4 +55,4 @@ upload_docs = build_sphinx upload_docs
 release = check -r -s register sdist upload_docs upload
 
 [test]
-suite = test.suite
+test-suite = test.suite
