--- a/setup.cfg
+++ b/setup.cfg
@@ -14,9 +14,8 @@ classifier = Development Status :: 3 - Alpha
     Topic :: Documentation
     Topic :: Text Processing :: General
     Programming Language :: Python :: 2
-    Programming Language :: Python :: 2.6
     Programming Language :: Python :: 2.7
-    Programming Language :: Python :: 2.5
+    Programming Language :: Python :: 2 :: Only
 requires-dist = docutils
 
 [files]
