fix for gztar distribution

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,7 @@ classifier = Development Status :: 3 - Alpha
     Programming Language :: Python :: 2.7
     Programming Language :: Python :: 2 :: Only
 requires-dist = docutils
+requires-python = 2.7
 
 [files]
 #TODO: users are install rst2textile, but docutils_textile package will be installed too.
@@ -39,19 +40,20 @@ extra_files =
 build-base = _build
 
 [sdist]
-;formats = gztar
+formats = gztar
 dist-dir = _dist
 
 [bdist]
-;formats = gztar
+formats = gztar
 dist-dir = _dist
 
-[upload_docs]
-upload-dir = _build/sphinx/html
+;[upload_docs]
+;upload-dir = _build/sphinx/html
 
 [aliases]
-upload_docs = build_sphinx upload_docs
-release = check -r -s register sdist upload_docs upload
+;upload_docs = build_sphinx upload_docs
+;release = check -r -s register sdist upload_docs upload
+release = check -r -s register sdist upload
 
 [test]
 test-suite = test.suite
