fix ambigious comment.

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,9 +22,9 @@ requires-python = 2.7
 [files]
 #TODO: users are install rst2textile, but docutils_textile package will be installed too.
 packages = docutils_textile
-#for '$ python -m rst2textile'
+#for '$ python -m rst2textile input.rst output.txt'
 modules = rst2textile
-#for '$ rst2textile.py ...
+#for '$ rst2textile.py input.rst output.txt'
 scripts = rst2textile.py
 
 #but need MANIFEST.in for old setup.py
