update document for python versions.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = rst2textile
-version = 0.1.0
+version = 0.1.1
 summary = rst2textile is docutils textile writer convert reStructuredText(rst) to Textile format.
 description-file = README.rst
 ;download_url = http://pypi.python.org/pypi/rst2textile
@@ -14,10 +14,14 @@ classifier = Development Status :: 3 - Alpha
     Topic :: Documentation
     Topic :: Text Processing :: General
     Programming Language :: Python :: 2
+    Programming Language :: Python :: 2.4
+    Programming Language :: Python :: 2.5
+    Programming Language :: Python :: 2.6
     Programming Language :: Python :: 2.7
-    Programming Language :: Python :: 2 :: Only
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.2
 requires-dist = docutils
-requires-python = 2.7
+requires-python = 2.4, 2.5, 2.6, 2.7, 3.2
 
 [files]
 #TODO: users are install rst2textile, but docutils_textile package will be installed too.
