--- a/setup.cfg
+++ b/setup.cfg
@@ -19,9 +19,11 @@ classifier = Development Status :: 3 - Alpha
     Programming Language :: Python :: 2.6
     Programming Language :: Python :: 2.7
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.1
     Programming Language :: Python :: 3.2
+    Programming Language :: Python :: 3.3
 requires-dist = docutils
-requires-python = 2.4, 2.5, 2.6, 2.7, 3.2
+requires-python = 2.4, 2.5, 2.6, 2.7, 3.1, 3.2, 3.3
 
 [files]
 #TODO: users are install rst2textile, but docutils_textile package will be installed too.
