--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
-envlist=py24,py25,py26,py27,py32,pypy,du08,du07,du06,du05
+;envlist=py24,py25,py26,py27,py31,py32,py33,du08,du07,du06,du05
+envlist=py24,py25,py26,py27,py31,py32,du08,du07,du06,du05
 
 [testenv]
 deps=
