remove pysetup feature.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,47 +1,6 @@
-[metadata]
-name = rst2textile
-version = 0.1.2
-summary = rst2textile is docutils textile writer convert reStructuredText(rst) to Textile format.
-description-file = README.rst
-;download_url = http://pypi.python.org/pypi/rst2textile
-home_page = https://bitbucket.org/shimizukawa/rst2textile
-author = Takayuki SHIMIZUKAWA
-author_email = shimizukawa@gmail.com
-classifier = Development Status :: 3 - Alpha
-    Topic :: Utilities
-    Environment :: Other Environment
-    License :: OSI Approved :: Apache Software License
-    Topic :: Documentation
-    Topic :: Text Processing :: General
-    Programming Language :: Python :: 2
-    Programming Language :: Python :: 2.4
-    Programming Language :: Python :: 2.5
-    Programming Language :: Python :: 2.6
-    Programming Language :: Python :: 2.7
-    Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.1
-    Programming Language :: Python :: 3.2
-    Programming Language :: Python :: 3.3
-requires-dist = docutils
-requires-python = 2.4, 2.5, 2.6, 2.7, 3.1, 3.2, 3.3
-
-[files]
-#TODO: users are install rst2textile, but docutils_textile package will be installed too.
-packages = docutils_textile
-#for '$ python -m rst2textile input.rst output.txt'
-modules = rst2textile
-#for '$ rst2textile.py input.rst output.txt'
-scripts = rst2textile.py
-
-#but need MANIFEST.in for old setup.py
-extra_files =
-    README.rst
-    MANIFEST.in
-    setup.py
-    test.py
-    tox.ini
-    examples/sample.rst
-    examples/sample.txt
+[egg_info]
+tag_build = dev
+tag_date = true
 
 [build]
 build-base = _build
@@ -54,13 +13,8 @@ dist-dir = _dist
 formats = gztar
 dist-dir = _dist
 
-;[upload_docs]
-;upload-dir = _build/sphinx/html
-
 [aliases]
-;upload_docs = build_sphinx upload_docs
-;release = check -r -s register sdist upload_docs upload
-release = check -r -s register sdist upload
+release = egg_info -RDb '' check -r -s register sdist bdist_wheel upload
 
-[test]
-test-suite = test.suite
+[wheel]
+universal = true
