--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,5 @@
 [tox]
-;envlist=py24,py25,py26,py27,py31,py32,py33,du08,du07,du06,du05
-envlist=py24,py25,py26,py27,py31,py32,du08,du07,du06,du05
+envlist=py26,py27,py33,py34,du11,du10
 
 [testenv]
 deps=
@@ -8,18 +7,10 @@ deps=
 commands=
     python test.py
 
-[testenv:du05]
+[testenv:du10]
 deps=
-    docutils==0.5
+    docutils==0.10
 
-[testenv:du06]
+[testenv:du11]
 deps=
-    docutils==0.6
-
-[testenv:du07]
-deps=
-    docutils==0.7
-
-[testenv:du08]
-deps=
-    docutils==0.8.1
+    docutils==0.11
