--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,8 @@ formats = gztar
 dist-dir = _dist
 
 [aliases]
-release = egg_info -RDb '' check -r -s register sdist bdist_wheel upload
+check = check -r -s
+release = egg_info -RDb '' check register sdist bdist_wheel upload
 
 [wheel]
 universal = true
